fix(collapse): Change padding with default variable on collapse (#65)

--- a/src/styles/helpers/_variables.scss
+++ b/src/styles/helpers/_variables.scss
@@ -12,6 +12,7 @@ $font-size-icon: 20px !default;
 // PADDINGS
 // ----------------------------------------
 $padding-base: 8px !default;
+$padding-collapse: $padding-base !default;
 
 // COLORS
 // ----------------------------------------
